--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,39 @@
 <resources>
-    <string name="app_name">MicroSiase</string>
+    <string name="app_name">MicroSIASE</string>
+    <string name="options_title">Seleccione el contenido que desea ver</string>
+    <string name="students_list_title">Listado de estudiantes</string>
+    <string name="subjects_list_title">Listado de materias</string>
+    <string name="hint_student_name">Nombre del alumno</string>
+    <string name="hint_id_student">ID del estudiante</string>
+    <string name="hint_semester">Semestre (1-5)</string>
+    <string name="hint_opportunity">Oportunidad (1-6)</string>
+    <string name="hint_group">ID del grupo</string>
+    <string name="hint_grade">Calificación</string>
+    <string name="add_student">Agregar estudiante</string>
+    <string name="hint_unit_status">Status</string>
+    <string name="add_subject">Agregar materia</string>
+    <string name="hint_subject_name">Nombre de la materia</string>
+    <string name="hint_dependency">ID materia necesaria</string>
+    <string name="hint_description">Descripción</string>
+    <string name="hint_teacher">ID del docente</string>
+    <string name="hint_room">Número del aula</string>
+    <string name="hint_students_amount">Cantidad máxima de estudiantes</string>
+    <string name="hint_start_hour">Hora de inicio</string>
+    <string name="hint_end_hour">Hora de fin</string>
+    <string name="empty_text"/>
+    <string name="monday">Lunes</string>
+    <string name="tuesday">Martes</string>
+    <string name="wednesday">Miércoles</string>
+    <string name="thursday">Jueves</string>
+    <string name="friday">Viernes</string>
+    <string name="saturday">Sábado</string>
+    <string name="subject_name">Nombre de la materia</string>
+    <string name="room">Aula</string>
+    <string name="start_hour">Hora de inicio</string>
+    <string name="end_hour">Hora de fin</string>
+    <string name="semester">Semestre</string>
+    <string name="day">Lunes-Sábado</string>
+    <string name="day_schedule">Día(s) de la semana</string>
+    <string name="login">Iniciar sesión</string>
+    <string name="students_by_subject">Estudiantes inscritos</string>
 </resources>
